test/trivial/deitz/test_assign_const.good
test/trivial/deitz/test_assign_const.chpl:2: error: Assigning to a constant expression [semanticChecks.cpp:186]
